Agrega información al contacto

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 ¡Hola! Soy Ana García, desarrolladora Front-end con especialización en React, HTML y CSS. 
                 Ayudo a pequeños negocios y diseñadores a llevar a cabo buenas ideas. ¿Hablamos?
             </p>
+            <p>Instructora</p>
             <div class="presentacion__enlaces">
                 <h2 class="presentacion__enlaces__subtitulo">Accede a mis redes:</h2>
                 <a class="presentacion__enlaces__link" href="https://www.instagram.com/"> <img src="./assets/instagram.png"> Instagram</a>
